gthread.h: avoid anonymous union

This is a GNU extension.

https://bugzilla.gnome.org/show_bug.cgi?id=666978